[package]
name = "nctk-checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

config = "0.13.3"
hostname = "0.3.1"
lazy_static = "1.4.0"
notify = "6.1.1"
serde = "1.0.188"
serde_derive = "1.0.188"
